更新jvm学习，内存区域、对象创建、各个区域的OOM异常代码测试。